-- v0.6 development series --

- Add a "load default template" button for the "insert complex latex dialog"
- Add a "show debug information" option for people who are having trouble
getting things to work properly
- Make the paths in the options editable for mac users who cannot navigate to
the place where the binaries are located