@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
 <overlay id="messengerWindow" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
   <script type="application/x-javascript" src="firstrun.js" />
+  <script type="application/x-javascript" src="osx-path-hacks.js" />
 </overlay>
