@@ -4,7 +4,7 @@
 
   <Description about="urn:mozilla:install-manifest">
     <em:id>tblatex@xulforum.org</em:id>
-    <em:version>0.6.101018pre</em:version>
+    <em:version>0.6.1</em:version>
     
     <!-- Target Application this theme can install into, 
         with minimum and maximum supported versions. --> 
